--- a/index.html
+++ b/index.html
@@ -6,11 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mission-2022</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&family=Roboto:wght@300;400&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-    <h1>hd</h1>
+    <section>
+        <div class="flexble">
+            <div class="half-width">
+                <div id="mission-border">
+                    <h1>Stay Focused on</h1>
+                    <h1><span class="orange">Mission 2022!!</span></h1>
+                </div>
+
+                <p>My name is Haifa Binte Habib Samiya. I want to be a developer.Thats whay i start this mission on
+                    time. I don't know how much i want but i will do my best.</p>
+                <a class="explore" href="">Explore Now</a>
+                <small>
+                    <p> Scroll down to explore more about us</p>
+                </small>
+            </div>
+            <div class="half-width">
+                <img src="images/person/haifa.png" alt="">
+            </div>
+
+        </div>
+
+    </section>
 </body>
 
 </html>
