My Mission adding

--- a/index.html
+++ b/index.html
@@ -37,6 +37,35 @@
         </div>
 
     </section>
+    <section>
+        <h1 id="second">
+            <center> <span class="blue"> My Mission in </span> <span class="yellow">2022</span> </center>
+        </h1>
+        <div class="flexble">
+            <div id="mission" class="mission-item-2nd">
+                <img src="images/illustrators/illustrator-1.png" alt="">
+                <h3>Mission</h3>
+                <p>My mission is"I Complete My course in time" I know sometimes it will be hard time.I know in this path
+                    is very difficult. but i will do this
+                    In-Sha-allah.</p>
+            </div>
+            <div id="vission" class="mission-item">
+                <img src="images/illustrators/illustrator-2.png" alt="">
+                <h3>Vission</h3>
+                <p>My vission is" I will do something in 2022". When i complete my course i will find job. </p>
+            </div>
+            <div id="goals" class="mission-item-3rd">
+                <img src="images/illustrators/illustrator-3.png" alt="">
+                <h3>Goals</h3>
+                <p>My goal is want to be a developer do something for my parents. My parents suffer many things in past.
+                    thats why want to do something different.</p>
+            </div>
+
+        </div>
+
+
+    </section>
+
 </body>
 
 </html>
