Develop without limits adding

--- a/index.html
+++ b/index.html
@@ -65,6 +65,21 @@
 
 
     </section>
+    <section class="develop">
+        <div class="flexble">
+            <div class="half-width">
+                <img src="images/pictures/coding.png" alt="">
+            </div>
+            <div class="half-width">
+                <h1 id="limit">Develop </h1>
+                <h1 id="limit"> Without Limits </h1>
+                <p>Sometimes we need more and more practice.Because if we don't understand our limits then we dont
+                    understand how much we need practice. Then try to develop new things day by day. if we develop new
+                    things then we learn something new things.</p>
+                <a class="explore" href="">Read the Documentatio</a>
+            </div>
+        </div>
+    </section>
 
 </body>
 
