Breast Cancer adding

--- a/index.html
+++ b/index.html
@@ -98,6 +98,32 @@
             </div>
         </div>
     </section>
+    <section>
+        <h2 id="application">
+            <center> <strong>Build Breast <span class="orange">Cancer Application
+                    </span></strong></center>
+        </h2>
+        <div class="flexble">
+            <div id="Breast-app" class="half-width">
+                <img src="images/app/app.png" alt="">
+            </div>
+            <div class="half-width">
+                <h1><strong>Stay Safe With Breast<span class="orange">Cancer
+                        </span></strong></h1>
+                <p>Doctors know that breast cancer occurs when some breast cells begin to grow abnormally. These cells
+                    divide more rapidly than healthy cells do and continue to accumulate, forming a lump or mass. Cells
+                    may spread (metastasize) through your breast to your lymph nodes or to other parts of your body.</p>
+                <a class="explore" href="">App Fetures</a>
+            </div>
+        </div>
+        <footer>
+            <div>
+                <h3> <span class="white-color">Mission</span> <span id="pink-color">2022</span> </h3>
+                <h6 class="white-color">Hard work, Perseverance, and Determination for 202</h6>
+            </div>
+        </footer>
+
+    </section>
 
 </body>
 
