--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
                 <img src="images/pictures/coding.png" alt="">
             </div>
             <div class="half-width">
-                <h1 class="limit">Develop </h1>
-                <h1 class="limit"> Without Limits </h1>
+                <h1 class="limit">Develop <br>
+                    Without Limits
+                </h1>
+
                 <p>Sometimes we need more and more practice.Because if we don't understand our limits then we dont
                     understand how much we need practice. Then try to develop new things day by day. if we develop new
                     things then we learn something new things.</p>
@@ -83,8 +85,10 @@
     <section>
         <div class="flexble">
             <div class="half-width">
-                <h1 class="limit">Know our </h1>
-                <h1 class="limit"> Global Community</h1>
+                <h1 class="limit"> Know our <br>
+                    Global Community
+                </h1>
+
                 <p>the people or nations of the world, considered as being closely connected by modern
                     telecommunications
                     and as being economically, socially, and politically interdependent.then know our global community
