final editing added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <h1><span class="orange">Mission 2022!!</span></h1>
                 </div>
 
-                <p>My name is Haifa Binte Habib Samiya. I want to be a developer.Thats whay i start this mission on
+                <p>My name is Haifa Binte Habib Samiya. I want to be a developer.Thats why i start this mission on
                     time. I don't know how much i want but i will do my best.</p>
                 <a class="explore" href="">Explore Now</a>
                 <small>
@@ -45,8 +45,8 @@
             <div id="mission" class="mission-item-2nd">
                 <img src="images/illustrators/illustrator-1.png" alt="">
                 <h3>Mission</h3>
-                <p>My mission is"I Complete My course in time" I know sometimes it will be hard time.I know in this path
-                    is very difficult. but i will do this
+                <p>My mission is"I Complete My course in time".I know in this path
+                    is very difficult. But I will do this
                     In-Sha-allah.</p>
             </div>
             <div id="vission" class="mission-item">
@@ -57,8 +57,9 @@
             <div id="goals" class="mission-item-3rd">
                 <img src="images/illustrators/illustrator-3.png" alt="">
                 <h3>Goals</h3>
-                <p>My goal is want to be a developer do something for my parents. My parents suffer many things in past.
-                    thats why want to do something different.</p>
+                <p>My goal is want to be a developer and do something for my parents. My parents suffer so many things
+                    in past.
+                    Thats why I want to do something different.</p>
             </div>
 
         </div>
@@ -75,9 +76,10 @@
                     Without Limits
                 </h1>
 
-                <p>Sometimes we need more and more practice.Because if we don't understand our limits then we dont
-                    understand how much we need practice. Then try to develop new things day by day. if we develop new
-                    things then we learn something new things.</p>
+                <p>Sometimes we need more and more practice.Because if we don't understand our limits then we don't
+                    understand how much we need practice. Then try to develop new things day by day.
+                    If we develop new
+                    things then we learn something new.</p>
                 <a class="explore" href="">Read the Documentatio</a>
             </div>
         </div>
@@ -89,11 +91,11 @@
                     Global Community
                 </h1>
 
-                <p>the people or nations of the world, considered as being closely connected by modern
+                <p>The people or nations of the world, considered as being closely connected by modern
                     telecommunications
                     and as being economically, socially, and politically interdependent.then know our global community
                 </p>
-                <a class="explore" href="">Read the Documentatio</a>
+                <a class="explore" href="">Read the Documentation</a>
 
             </div>
             <div class="half-width">
